# churn-prediction-platform

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .vercelignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py  model.py  schemas.py
backend/artifacts/: churn_pipeline.pkl  model_meta.json
backend/ml/: preprocess.py  train.py
backend/tests/: test_api.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: BatchUpload.jsx  Dashboard.jsx  ModelInfo.jsx  Predictor.jsx
frontend/src/services/: api.js
