[project]
name = "churniq-backend"
version = "1.0.0"
description = "ChurnIQ – Customer Churn Prediction API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "joblib>=1.5.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
# SHAP pulls numba → llvmlite (LLVM binaries) — not for serverless
explain = ["shap>=0.51.0"]
train = [
    "imbalanced-learn>=0.14.1",
    "optuna>=4.7.0",
    "mlflow>=3.10.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]
serve = ["uvicorn[standard]>=0.41.0"]

[project.scripts]
app = "app.main:app"
